Migrate Paths.get() user
Use Path.of() instead.

Change-Id: Ica83c7d586a2b1bdcfb842b767b41f21531f18b5
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 1dd22eac670092803265039f4ae2d0a36d72acf4)